# rapidsmpf

./: .clang-tidy  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONFIG_OPTIONS.md  CONTRIBUTING.md  README.md  VERSION  asan.supp  build.sh  dependencies.yaml  pyproject.toml  valgrind.supp
cpp/: .clang-format  CMakeLists.txt  REVIEW_GUIDELINES.md  asan_suppressions.txt  compute-sanitizer-suppressions.xml
cpp/benchmarks/: CMakeLists.txt  bench_comm.cpp  bench_comp_comm.cpp  bench_driver_pool_fragmentation.cpp  bench_fixed_sized_pool.cpp  bench_memory_resources.cpp  bench_pack.cpp  bench_partition.cpp  bench_pinned_memory_resources.cpp  bench_pinned_pool_fragmentation.cpp  bench_shuffle.cpp  bench_shuffle_no_partition.cpp  bench_shuffle_ucxx.cpp  launcher_ucxx.py  shuffle.cpp  utils.cu  utils.hpp
cpp/benchmarks/postbox/: bench_postbox.cpp  postbox2.hpp
cpp/benchmarks/streaming/: CMakeLists.txt  bench_streaming_shuffle.cpp  data_generator.hpp
cpp/benchmarks/utils/: misc.hpp  random_data.cu  random_data.hpp  rmm_stack.hpp  rmm_utils.hpp
cpp/doxygen/: Doxyfile  main_page.md
cpp/examples/: CMakeLists.txt  example_cupti_monitor.cpp  example_shuffle.cpp
cpp/include/rapidsmp/: buffer.hpp  error.hpp  nvtx.hpp  option.hpp  pausable_thread_loop.hpp  progress_thread.hpp  statistics.hpp  utils.hpp
cpp/include/rapidsmpf/: config.hpp  config_defaults.hpp  cuda_event.hpp  cuda_stream.hpp  cupti.hpp  defaults.hpp  error.hpp  locking.hpp  nvcomp.h  nvtx.hpp  option.hpp  options.hpp  owning_wrapper.hpp  pausable_thread_loop.hpp  progress_thread.hpp  progress_thread2.hpp  rmm_resource_adaptor.hpp  runtime.hpp  statistics.hpp  stream_ordered_timing.hpp  system_info.hpp  topology_discovery.hpp  utils.hpp
cpp/include/rrun/: rrun.hpp  scoped_env_var.hpp
cpp/scripts/: ndsh.py  run-cmake-format.sh  validate_ndsh.py
cpp/src/: all_gather.cpp  all_gatherer.cpp  allgather.cpp  buffer.cpp  config.cpp  cuda_event.cpp  cupti.cpp  locking.cpp  nvcomp.cpp  option.cpp  pausable_thread_loop.cpp  progress_thread.cpp  progress_thread2.cpp  rmm_resource_adaptor.cpp  runtime.cpp  statistics.cpp  stream_ordered_timing.cpp  system_info.cpp  topology_discovery.cpp  utils.cpp
cpp/src/allgather/: allgather.cpp
cpp/src/allreduce/: allreduce.cpp  device_kernels.cu
cpp/src/bootstrap/: bootstrap.cpp  file_backend.cpp  slurm_backend.cpp  socket_backend.cpp  ucxx.cpp  utils.cpp
cpp/src/buffer/: buffer.cpp  pinned_memory_resource.cu  resource.cpp  spill_manager.cpp
cpp/src/coll/: allgather.cpp  allreduce.cpp  device_kernels.cu  gather_statistics.cpp  sparse_alltoall.cpp  utils.cpp
cpp/src/communicator/: communication_interface.cpp  communicator.cpp  message.cpp  metadata_payload_exchange.cpp  mpi.cpp  progress_thread.cpp  single.cpp  ucxx.cpp  ucxx_utils.cpp
cpp/src/cudf/: partition.cpp
cpp/src/memory/: aligned_buffer.cpp  buffer.cpp  buffer_resource.cpp  fixed_sized_host_buffer.cpp  host_buffer.cpp  host_memory_resource.cpp  memory_reservation.cpp  memory_type.cpp  pinned_memory_resource.cpp  pinned_memory_resource.cu  resource.cpp  scoped_memory_record.cpp  spill.cpp  spill_manager.cpp
cpp/src/rrun/: rrun.cpp
cpp/src/shuffler/: chunk.cpp  chunk_batch.cpp  chunk_message_adapter.cpp  communication_interface.cpp  finish_counter.cpp  partition.cpp  postbox.cpp  shuffler.cpp
cpp/src/utils/: misc.cpp  string.cpp
cpp/tests/: CMakeLists.txt  environment.hpp  error_macros_tests.cpp  generate_resource_spec.cpp  main_mpi.cpp  test_aligned_buffer.cpp  test_all_gather.cpp  test_all_gatherer.cpp  test_allgather.cpp  test_allgather_packed_data.cpp  test_allreduce.cpp  test_allreduce.cu  test_allreduce_custom_kernels.cu  test_allreduce_custom_type.hpp  test_buffer.cpp  test_buffer.cu  test_buffer_resource.cpp  test_buffer_resource_tracking.cpp  test_chunk.cpp  test_chunk_batch.cpp  test_chunk_batch.cu  test_communication_interface.cpp  test_communicator.cpp  test_config.cpp  test_cuda_stream.cpp  test_cudf_pack.cpp  test_cudf_utils.cpp  test_cupti_integration.cpp  test_cupti_monitor.cpp  test_cupti_public_api.cpp  test_error_macros.cpp  test_gather_statistics.cpp  test_host_buffer.cpp  test_memory_resources.cpp  test_metadata_payload_exchange.cpp  test_misc.cpp  test_nvtx.cpp  test_partition.cpp  test_partition_utils.cpp  test_partitions.cpp  (+21 more)
cpp/tests/bootstrap/: test_key_validation.cpp  test_socket_backend.cpp
cpp/tests/main/: bootstrap.cpp  mpi.cpp  no_env.cpp  rrun.cpp  single.cpp  ucxx.cpp
cpp/tests/shuffler/: test_shuffler.cpp
cpp/tests/streaming/: base_streaming_fixture.hpp  test_allgather.cpp  test_allreduce.cpp  test_bcast_node.cpp  test_channel.cpp  test_channel_metadata.cpp  test_error_handling.cpp  test_fanout.cpp  test_halo_exchange.cpp  test_leaf_actor.cpp  test_leaf_node.cpp  test_lineariser.cpp  test_memory_reserve_or_wait.cpp  test_message.cpp  test_partition.cpp  test_read_parquet.cpp  test_shuffler.cpp  test_sparse_alltoall.cpp  test_spillable_messages.cpp  test_table_chunk.cpp
cpp/tools/: CMakeLists.txt  README.md  check_resource_binding.cpp  example_hostfile.txt  rrun.cpp  rrun_config.hpp  rrun_single_node.cpp  rrun_slurm_hybrid.cpp  rrun_slurm_passthrough.cpp  rrun_utils.cpp  rrun_utils.hpp  topology_discovery.cpp
python/: CMakeLists.txt  REVIEW_GUIDELINES.md  pyproject.toml
python/librapidsmp/: CMakeLists.txt  pyproject.toml
python/librapidsmpf/: CMakeLists.txt  README.md  pyproject.toml
python/librapidsmpf/librapidsmpf/: __init__.py  _rrun.py  _version.py  load.py
python/pyrmp/: CMakeLists.txt
python/rapidsmp/: CMakeLists.txt  pyproject.toml
python/rapidsmp/rapidsmp/: CMakeLists.txt  __init__.py  exception_handling.pxd  exception_handling.pyx  progress_thread.pxd  progress_thread.pyi  progress_thread.pyx  shuffler.pxd  shuffler.pyi  shuffler.pyx  statistics.pxd  statistics.pyi  statistics.pyx  testing.py
python/rapidsmpf/: CMakeLists.txt  pyproject.toml
python/rapidsmpf/rapidsmpf/: CMakeLists.txt  __init__.py  _spill_report.py  _testing.py  _version.py  config.pxd  config.pyi  config.pyx  config_defaults.pyi  config_defaults.pyx  (+31 more)
(+692 files in other folders)
